--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/styles.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./styles/styles.css'>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js'></script>
     <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/plugins/PixiPlugin.min.js'></script> -->
-    <script src='./src/main.js' defer></script>
+    <script src='./scripts/main.js' defer></script>
     <link href="https://fonts.googleapis.com/css?family=Iceberg" rel="stylesheet" defer>
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet" defer>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" defer>
+
 </head>
 
 <body></body>
@@ -24,6 +26,7 @@
 
     <div class='title'>
 
+        <i class="fas fa-igloo" style="color: #000;"></i>
         <h1>Sphero</h1>
 
     </div>
